infra/k8s/mysql-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-server-srv
spec:
  type: ClusterIP
  selector:
    app: mysql-server
  ports:
    - name: mysql-server
      protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-server
  template:
    metadata:
      labels:
        app: mysql-server
    spec:
      containers:
        - name: mysql-server
          image: mysql
          ports:
            - containerPort: 3306
              name: mysql-server
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-server-nodeport
spec:
  type: NodePort
  selector:
    app: mysql-server
  ports:
    - name: mysql-server-port
      protocol: TCP
      port: 3306
      targetPort: 3306
