infra/k8s/oauth-depl.yaml.yaml
### GIN oauth app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-gin-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-gin
  template:
    metadata:
      labels:
        app: oauth-gin
    spec:
      containers:
        - name: oauth-gin
          image: adharshmk96/gin_oauth
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-gin-srv
spec:
  type: ClusterIP
  selector:
    app: oauth-gin
  ports:
    - name: oauth-gin
      protocol: TCP
      port: 3000
      targetPort: 3000
